# FittingAedes

./: README.md  Y_sobol_results_NewParams.pkl  dataAssimilation.ipynb  dataNew.csv  dataPreparation.ipynb  inmetDados.csv  main.py  pyproject.toml  readHistData.py  train_multiple_cities.ipynb
CampoGrande/: dataNew.csv  dataPreparation.ipynb  fullPrepareAndTrain.ipynb  readHistData.py
DuqueDeCaxias/: dataNew.csv  dataPreparation.ipynb  fullPrepareAndTrain.ipynb
NovaIguacu/: dataNew.csv  dataPreparation.ipynb  fullPrepareAndTrain.ipynb  readHistData.py
Parnamirim/: dataNew.csv  dataPreparation.ipynb  fullPrepareAndTrain.ipynb  readHistData.py
Santarem/: dataNew.csv  dataPreparation.ipynb  fullPrepareAndTrain.ipynb
data/: CampoGrande.csv  DuqueCaxias.csv  NovaIguacu.csv  Parnamirim.csv  Santarem.csv
maps/: coordinates_report.txt  download_maps.py
testDataset/: dataAssimilation.ipynb
testDataset/CampoGrande/: dataAssimilation.ipynb  dataNew.csv  dataPreparation.ipynb
testDataset/DuqueDeCaxias/: dataAssimilation.ipynb  dataNew.csv  dataPreparation.ipynb  readHistData.py
testDataset/NovaIguacu/: dataAssimilation.ipynb  dataNew.csv  dataPreparation.ipynb
testDataset/Parnamirim/: dataAssimilation.ipynb  dataNew.csv  dataPreparation.ipynb
testDataset/Santarem/: dataNew.csv  dataPreparation.ipynb  readHistData.py  results_new_params.json
testDataset/Santarem_new/: dataAssimilation.ipynb  dataNew.csv  dataPreparation.ipynb  readHistData.py
testDataset/data/: CampoGrande.csv  DuqueCaxias.csv  NovaIguacu.csv  Parnamirim.csv  Santarem.csv
(+3 files in other folders)
