[project]
name = "finalpnas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "lmfit>=1.3.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "salib>=1.5.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
